# delta-loader

./: environemnt.yml  pyproject.toml
delta_loader/: delta_loader.py
delta_loader/cloud_utils/aws/: dynamo.py  s3.py
delta_loader/cloud_utils/databricks/: databricks.py
